fixed back button on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -132,3 +132,8 @@ body {
   border:0;
   height:2px;
 }
+
+.glyphicon-menu-left {
+
+  font-size: 50px;
+}
